Completed 1st and 2nd User Stories

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   </head>
 
   <body>
-    <h1>Hello, World,we are software developers!</h1>
+    <header id="header">
+          <img id="header-img" src="https://image.flaticon.com/icons/svg/188/188987.svg" width=150px />
+    </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <!--
