--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <header id="header">
           <img id="header-img" src="https://image.flaticon.com/icons/svg/188/188987.svg" width=150px />
+          <nav id="nav-bar">
+            <a href="#" class = "nav-link">Features</a>
+            <a href="#" class = "nav-link">Features</a>
+            <a href="#" class = "nav-link">Features</a>
+          </nav>
+          
     </header>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
