--- a/index.html
+++ b/index.html
@@ -11,8 +11,13 @@
         <div class="logo">
           <img id="header-img" src="https://image.flaticon.com/icons/svg/188/188987.svg" width=150px />
         </div>  
-          <h1>Pokemon : Picachu</h1>
-          <form action="" id="form"><input id="email" type="text" name="firstname" placeholder="Enter your email adress"></form>
+        <section>
+          <h2>Pokemon : Go</h2>
+          <form id="form" action="POST">
+            <input id="email" type="email" name="email" placeholder="Enter your email address" required /><br>
+            <!-- <input id="submit" type="submit" value="Get Started"> -->
+          </form>
+        </section>
           <nav id="nav-bar">
             <a href="#" class = "nav-link">Features</a>
             <a href="#" class = "nav-link">Features</a>
