--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
         </div>  
         <section>
           <h2>Pokemon : Go</h2>
-          <form id="form" action="POST">
+          <form id="form" action="https://www.freecodecamp.com/email-submit" >
             <input id="email" type="email" name="email" placeholder="Enter your email address" required /><br>
-            <!-- <input id="submit" type="submit" value="Get Started"> -->
+            <input id="submit" type="submit" value="Get Started"> 
           </form>
         </section>
           <nav id="nav-bar">
-            <a href="#" class = "nav-link">Features</a>
-            <a href="#" class = "nav-link">Features</a>
-            <a href="#" class = "nav-link">Features</a>
+            <a href="#features" class = "nav-link">Features</a>
+            <a href="#howtoitworks" class = "nav-link">How it works</a>
+            <a href="#pricing" class = "nav-link">Pricing</a>
           </nav>        
 
     </header>
     
-    <section>
+    <section id="features">
         <iframe width="667" height="375" src="https://www.youtube.com/embed/yQCREgz4tQY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   
     </section>
