Completed 11th and 12th User Stories

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
           </form>
         </section>
           <nav id="nav-bar">
-            <a href="#features" class = "nav-link">Features</a>
-            <a href="#howtoitworks" class = "nav-link">How it works</a>
-            <a href="#pricing" class = "nav-link">Pricing</a>
+            <ul>
+            <li><a href="#features" class = "nav-link">Features</a></li>
+            <li><a href="#howtoitworks" class = "nav-link">How it works</a></li>
+            <li></li><a href="#pricing" class = "nav-link">Pricing</a></li>
+          </ul>
           </nav>        
 
     </header>
